--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "homebridge-blinds",
-  "version": "1.1.0",
+  "version": "1.3.0",
   "description": "A homebridge plugin to control my blinds",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint *.js"
   },
   "keywords": [
     "homebridge-plugin",
@@ -18,7 +19,14 @@
     "type": "git",
     "url": "git+https://github.com/zwerch/homebridge-blinds.git"
   },
+  "bugs": {
+    "url": "https://github.com/zwerch/homebridge-blinds/issues"
+  },
   "author": "Robin Temme <zwerch1337@googlemail.com>",
+  "contributors": [
+    "Jimmy Henderickx <jimmyhdx@gmail.com>",
+    "Daniel Caspi <dan@element26.net>"
+  ],
   "license": "ISC",
   "dependencies": {
     "node-persist": "^2.1.0",
