Update dependencies, add linting

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A homebridge plugin to control my blinds",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit",
-    "lint": "eslint *.js"
+    "format": "prettier --write *.js",
+    "lint": "eslint *.js",
+    "test": "echo \"Error: no test specified\" && exit"
   },
   "keywords": [
     "homebridge-plugin",
@@ -33,10 +34,12 @@
     "jsonata": "^1.8.3",
     "node-persist": "^2.1.0",
     "request": "^2.88.2",
-    "requestretry": "^4.1.0",
+    "requestretry": "^4.1.1",
     "selfsigned": "^1.10.7"
   },
   "devDependencies": {
-    "eslint": "^6.8.0"
+    "eslint": "^7.1.0",
+    "prettier": "^2.0.5",
+    "rimraf": "^3.0.2"
   }
 }
