--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "homebridge-blinds",
-  "version": "1.3.21",
+  "version": "1.3.22",
   "description": "A homebridge plugin to control my blinds",
   "main": "index.js",
   "scripts": {
-    "format": "prettier --write *.js",
+    "format": "prettier --write config.schema.json *.js",
     "lint": "eslint *.js",
     "test": "echo \"Error: no test specified\" && exit"
   },
@@ -39,7 +39,7 @@
     "selfsigned": "^1.10.7"
   },
   "devDependencies": {
-    "eslint": "^7.3.1",
+    "eslint": "^7.4.0",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2"
   }
