--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homebridge-blinds",
-  "version": "1.3.22",
+  "version": "1.3.23-beta.0",
   "description": "A homebridge plugin to control my blinds",
   "main": "index.js",
   "scripts": {
@@ -32,16 +32,16 @@
   "license": "ISC",
   "dependencies": {
     "http-auth": "^4.1.2",
-    "jsonata": "^1.8.3",
+    "jsonata": "^1.8.4",
     "node-persist": "^2.1.0",
     "request": "^2.88.2",
-    "requestretry": "^4.1.1",
-    "selfsigned": "^1.10.7"
+    "requestretry": "^4.1.2",
+    "selfsigned": "^1.10.8"
   },
   "devDependencies": {
-    "eslint": "^7.4.0",
-    "eslint-plugin-json": "^2.1.1",
-    "prettier": "^2.0.5",
+    "eslint": "^7.16.0",
+    "eslint-plugin-json": "^2.1.2",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2"
   }
 }
