--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "homebridge-blinds",
-  "version": "1.3.23-beta.1",
+  "version": "1.3.23",
   "description": "A homebridge plugin to control my blinds",
   "main": "index.js",
   "scripts": {
-    "format": "prettier --write config.schema.json .eslintrc.json *.js",
+    "format": "prettier --write config.schema.json .eslintrc.json *.js *.md",
     "lint": "eslint *.js *.json",
     "test": "echo \"Error: no test specified\" && exit"
   },
