--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "format": "prettier --write config.schema.json .eslintrc.json *.js *.md",
     "lint": "eslint *.js *.json",
+    "spellcheck": "mdspell -r -n *.md",
     "test": "echo \"Error: no test specified\" && exit"
   },
   "keywords": [
@@ -36,12 +37,13 @@
     "node-persist": "^2.1.0",
     "request": "^2.88.2",
     "requestretry": "^4.1.2",
-    "selfsigned": "^1.10.8"
+    "selfsigned": "^1.10.11"
   },
   "devDependencies": {
-    "eslint": "^7.24.0",
-    "eslint-plugin-json": "^2.1.2",
-    "prettier": "^2.2.1",
+    "eslint": "^7.26.0",
+    "eslint-plugin-json": "^3.0.0",
+    "markdown-spellcheck": "^1.3.1",
+    "prettier": "^2.3.0",
     "rimraf": "^3.0.2"
   }
 }
