--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homebridge-blinds",
-  "version": "1.3.25-beta.3",
+  "version": "1.3.25",
   "description": "A homebridge plugin to control my blinds",
   "main": "index.js",
   "scripts": {
