--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homebridge-blinds",
-  "version": "1.3.27",
+  "version": "2.0.0-beta.4",
   "description": "A homebridge plugin to control my blinds",
   "main": "index.js",
   "scripts": {
@@ -40,10 +40,10 @@
     "selfsigned": "^1.10.11"
   },
   "devDependencies": {
-    "eslint": "^8.16.0",
+    "eslint": "^8.19.0",
     "eslint-plugin-json": "^3.1.0",
     "markdown-spellcheck": "^1.3.1",
-    "prettier": "^2.6.2",
+    "prettier": "^2.7.1",
     "rimraf": "^3.0.2"
   }
 }
