--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homebridge-blinds",
-  "version": "2.0.0-beta.4",
+  "version": "2.0.0",
   "description": "A homebridge plugin to control my blinds",
   "main": "index.js",
   "scripts": {
